--- a/LeafAI/pages/templates/home.html
+++ b/LeafAI/pages/templates/home.html
@@ -15,7 +15,7 @@
        class="bg-green-600 text-white px-6 py-3 rounded-xl shadow-md hover:bg-green-700 transition">
       Get Started – Sign Up
     </a>
-    <a href="{% url 'login' %}" 
+    <a href="{% url 'login_redirect' %}" 
        class="bg-white text-green-700 border border-green-600 px-6 py-3 rounded-xl shadow-md hover:bg-gray-100 transition">
       Login
     </a>
